Enhance system design documents with detailed interview questions and answers for Parking Lot, Rate Limiter, URL Shortener, and Load Balancing. Include scenarios for fee calculation, lost tickets, dynamic pricing, multi-layer rate limiting, custom aliases, click fraud detection, and more. Improve clarity on design patterns, database schema, and handling edge cases in each system.